tests/miz/fail/types/fail_type_elaboration_registration_block_gap_001.miz
import parser.type_fixtures;

registration
  cluster RegistrationPayloadExists: non empty set;
  existence by Ref;

  cluster RegistrationPayloadImplication: empty -> empty for set;
  coherence by Ref;
end;
